--- a/Funkcje/app/src/main/res/layout/content_second.xml
+++ b/Funkcje/app/src/main/res/layout/content_second.xml
@@ -1,29 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-
-
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
     tools:context="com.example.mateu_000.funkcje.SecondActivity"
-    tools:showIn="@layout/activity_second2">
+    tools:showIn="@layout/activity_second2"
+    android:fillViewport="true"
+    android:id="@+id/scroll_view"
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/wzor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <View
-        android:id="@+id/wykres"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <LinearLayout
 
 
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
 
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/wzor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="55dp"
+                android:paddingBottom="5dp"/>
+
+            <LinearLayout
+
+                android:id="@+id/linear_layout_draw"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:orientation="horizontal"
+                android:background="@color/wykres">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="10dp">
+
+                <Button
+                    android:id="@+id/plusik"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+"
+                    android:background="#90A4AE"/>
+
+                <Button
+                    android:id="@+id/minusik"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:background="#90A4AE"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/x1"
+
+                    />
+
+
+            </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
