--- a/Funkcje/app/src/main/res/values/colors.xml
+++ b/Funkcje/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="white">#F4F4F4</color>
+    <color name="colorPrimary">#37474F</color>
+    <color name="colorPrimaryDark">#263238</color>
+    <color name="colorAccent">#607D8B</color>
+    <color name="white">#CFD8DC</color>
+    <color name="wykres">#4DB6AC</color>
+    <color name="button">#90A4AE</color>
+
 </resources>
